[package]
name = "lose-net-stack"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    ".",
    "example/"
]

[features]
log = ["dep:log"]

[dependencies]
log = { version = "0.4", optional = true }
bitflags = "1.3.2"
spin = "0.9.8"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
