[package]
name = "lose-net-stack"
version = "0.1.0"
edition = "2021"

[features]
log = ["dep:log"]

[dependencies]
log = { version = "0.4", optional = true }
bitflags = "1.3.2"
spin = "0.9.8"
num_enum = { version = "0.6.1", default-features = false}

[workspace]
members = [
    # ".",
    "example"
]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
